force-app/main/default/objects/RTV_Order_Item_DEF_Detail__c/RTV_Order_Item_DEF_Detail__c.object-meta.xml
<CustomObject>
    <label>RTV Order Item DEF Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RTV Order Item DEF Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>