force-app/main/default/objects/RTV_Order_Item_DEF_Detail__c/fields/Acceptable_Return_Amount__c.field-meta.xml
<CustomField>
    <fullName>Acceptable_Return_Amount__c</fullName>
    <formula>RTV_Order_Item__r.Final_Price_D__c *  Acceptable_Return_QTY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Acceptable Return Amount</inlineHelpText>
    <label>Acceptable Return Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>