force-app/main/default/objects/RTV_Order_Item_DEF_Detail__c/fields/Actual_Diff_QTY__c.field-meta.xml
<CustomField>
    <fullName>Actual_Diff_QTY__c</fullName>
    <description>实收差异</description>
    <formula>Actual_QTY__c - Application_QTY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>实收差异</inlineHelpText>
    <label>Actual Diff QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>