force-app/main/default/objects/RTV_Order_Item_DEF_Detail__c/fields/Box_Code__c.field-meta.xml
<CustomField>
    <fullName>Box_Code__c</fullName>
    <label>Box Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>