force-app/main/default/objects/RTV_Order_Item_DEF_Detail__c/fields/BU_2__c.field-meta.xml
<CustomField>
    <fullName>BU_2__c</fullName>
    <label>BU-2</label>
    <length>3</length>
    <type>Text</type>
</CustomField>