force-app/main/default/objects/RTV_Order_Item_DEF_Detail__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>