force-app/main/default/objects/RTV_Order_Item_DEF_Detail__c/fields/Customer_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Abbreviation__c</fullName>
    <label>Customer Abbreviation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>