force-app/main/default/objects/RTV_Order_Item_DEF_Detail__c/fields/DEF_12M_18M__c.field-meta.xml
<CustomField>
    <fullName>DEF_12M_18M__c</fullName>
    <label>&gt;12M&lt;18M</label>
    <length>10</length>
    <type>Text</type>
</CustomField>