force-app/main/default/objects/RTV_Order_Item_DEF_Detail__c/fields/Defective_Reason_LF__c.field-meta.xml
<CustomField>
    <fullName>Defective_Reason_LF__c</fullName>
    <label>Defective Reason(LF)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>