force-app/main/default/objects/RTV_Order_Item_DEF_Detail__c/fields/Defective_Source_LF__c.field-meta.xml
<CustomField>
    <fullName>Defective_Source_LF__c</fullName>
    <label>Defective Source(LF)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>原残</fullName>
            </value>
            <value>
                <fullName>客残</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
                <isActive>false</isActive>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Original</fullName>
                <isActive>false</isActive>
                <label>Original</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>