force-app/main/default/objects/RTV_Order_Item_DEF_Detail__c/fields/Delivery_QTY__c.field-meta.xml
<CustomField>
    <fullName>Delivery_QTY__c</fullName>
    <label>Delivery QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>