force-app/main/default/objects/RTV_Order_Item_DEF_Detail__c/fields/Destroy_QTY__c.field-meta.xml
<CustomField>
    <fullName>Destroy_QTY__c</fullName>
    <description>销毁数量</description>
    <label>Destroy QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>