force-app/main/default/objects/RTV_Order_Item_DEF_Detail__c/fields/Detail_Number__c.field-meta.xml
<CustomField>
    <fullName>Detail_Number__c</fullName>
    <label>Detail Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>