force-app/main/default/objects/RTV_Order_Item_DEF_Detail__c/fields/Factory_Code__c.field-meta.xml
<CustomField>
    <fullName>Factory_Code__c</fullName>
    <label>Factory Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>