force-app/main/default/objects/RTV_Order_Item_DEF_Detail__c/fields/FactoryReturnQTY__c.field-meta.xml
<CustomField>
    <fullName>FactoryReturnQTY__c</fullName>
    <description>实际退工厂数量</description>
    <label>Factory Return QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>