force-app/main/default/objects/RTV_Order_Item_DEF_Detail__c/fields/isDiff__c.field-meta.xml
<CustomField>
    <fullName>isDiff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDiff</label>
    <type>Checkbox</type>
</CustomField>