force-app/main/default/objects/RTV_Order_Item_DEF_Detail__c/fields/Order_Auth_Code__c.field-meta.xml
<CustomField>
    <fullName>Order_Auth_Code__c</fullName>
    <label>Order Auth Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>