force-app/main/default/objects/RTV_Order_Item_DEF_Detail__c/fields/Reject_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reject_Reason__c</fullName>
    <label>Reject Reason</label>
    <length>40</length>
    <type>Text</type>
</CustomField>