force-app/main/default/objects/RTV_Order_Item_DEF_Detail__c/fields/RTV_Order__c.field-meta.xml
<CustomField>
    <fullName>RTV_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RTV Order</label>
    <referenceTo>RTV_Order__c</referenceTo>
    <relationshipLabel>RTV Order Item DEF Detail</relationshipLabel>
    <relationshipName>RTV_Order_Item_DEF_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>