force-app/main/default/objects/RTV_Order_Item_DEF_Detail__c/fields/RTV_Order_Item__c.field-meta.xml
<CustomField>
    <fullName>RTV_Order_Item__c</fullName>
    <label>RTV Order Item</label>
    <referenceTo>RTV_Order_Item__c</referenceTo>
    <relationshipLabel>Defective Details</relationshipLabel>
    <relationshipName>RTV_Order_Item_DEF_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>