force-app/main/default/objects/RTV_Order_Item_DEF_Detail__c/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To</label>
    <referenceTo>RMS_Ship_To__c</referenceTo>
    <relationshipLabel>RTV Order Item DEF Detail</relationshipLabel>
    <relationshipName>RTV_Order_Item_DEF_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>