force-app/main/default/objects/RTV_Order_Item_DEF_Detail__c/fields/Sold_To__c.field-meta.xml
<CustomField>
    <fullName>Sold_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold To</label>
    <referenceTo>RMS_Sold_To__c</referenceTo>
    <relationshipLabel>RTV Order Item DEF Detail</relationshipLabel>
    <relationshipName>RTV_Order_Item_DEF_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>