force-app/main/default/objects/RTV_Order_Item_DEF_Detail__c/fields/Specialcase_DEF_CC__c.field-meta.xml
<CustomField>
    <fullName>Specialcase_DEF_CC__c</fullName>
    <label>Specialcase DEF CC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>