force-app/main/default/objects/RTV_Order_Item_DEF_Detail__c/recordTypes/Defective.recordType-meta.xml
<RecordType>
    <fullName>Defective</fullName>
    <active>true</active>
    <label>Defective</label>
</RecordType>